add lastLoginAt